<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@drawable/item_bg_green"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dd"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/slsh1"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mm"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/slsh2"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/yy"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/item_bg_green"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/hour"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cln1"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/min"
                style="@style/TextViewFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/intensity_grp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/low_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="true"
            android:paddingRight="35dp"
            android:src="@drawable/sad" />

        <ImageView
            android:id="@+id/high_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="35dp"
            android:src="@drawable/skull" />
    </LinearLayout>

    <ImageView
        android:id="@+id/sun_expo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/sun_orange" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <ImageView
            android:id="@+id/crcn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/crocin" />

        <ImageView
            android:id="@+id/nprcn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/neprocin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="18dp"
        android:paddingTop="18dp" >

        <TextView
            android:id="@+id/note"
            style="@style/TextViewFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_colon"
            android:layout_marginLeft="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_note"
            style="@style/TextViewFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="120"
            android:hint="@string/add_note" />
    </LinearLayout>

    <Button
        android:id="@+id/sbmt"
        style="@style/TextViewFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_weight="1"
        android:src="@drawable/star_outline" />

</LinearLayout>